# RagAgent

./: .env.example  .gitignore  CMakeLists.txt  README.md
include/: config.hpp  document.hpp  document_loader.hpp  json_utils.hpp  ollama_client.hpp  text_splitter.hpp  vector_store.hpp
src/: config.cpp  document_loader.cpp  json_utils.cpp  main.cpp  ollama_client.cpp  text_splitter.cpp  vector_store.cpp
